图片库基本完成

--- a/gallery.html
+++ b/gallery.html
@@ -5,28 +5,37 @@
 	<title>Image Gallery</title>
 </head>
 <body>
-	<h1>Snapshots</h1>
-	<ul>
-		<li>
-			<a href="images/fireworks.jpg" title="A fireworks display">
-				Fireworks
-			</a>
-		</li>
-		<li>
-			<a href="images/coffee.jpg" title="A cup of black coffee">
-				Coffee
-			</a>
-		</li>
-		<li>
-			<a href="images/rose.jpg" title="A red, red rose">
-				Rose
-			</a>
-		</li>
-		<li>
-			<a href="images/bigben.jpg" title="The famous clock">
-				Big Ben
-			</a>
-		</li>
-	</ul>
+	<header>
+		<h1>Snapshots</h1>
+	</header>
+	<nav>
+		<ul>
+			<li>
+				<a href="images/fireworks.jpg" title="A fireworks display" onclick="showPic(this); return false;">
+					Fireworks
+				</a>
+			</li>
+			<li>
+				<a href="images/coffee.jpg" title="A cup of black coffee" onclick="showPic(this); return false;">
+					Coffee
+				</a>
+			</li>
+			<li>
+				<a href="images/rose.jpg" title="A red, red rose" onclick="showPic(this); return false;">
+					Rose
+				</a>
+			</li>
+			<li>
+				<a href="images/bigben.jpg" title="The famous clock" onclick="showPic(this); return false;">
+					Big Ben
+				</a>
+			</li>
+		</ul>
+	</nav>
+	<section class="placeholder">
+		<img id="placeholder" src="images/placeholder.png" alt="my image gallery" />
+	</section>
+
+	<script type="text/javascript" src="scripts/showPic.js"></script>
 </body>
 </html>
