实现切换文字功能，添加样式

--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Image Gallery</title>
+	<link rel="stylesheet" href="styles/layout.css" />
 </head>
 <body>
 	<header>
@@ -34,6 +35,7 @@
 	</nav>
 	<section class="placeholder">
 		<img id="placeholder" src="images/placeholder.png" alt="my image gallery" />
+		<p id="description">Choose an image.</p>
 	</section>
 
 	<script type="text/javascript" src="scripts/showPic.js"></script>
