将html与js分离，去除js对html的依赖

--- a/gallery.html
+++ b/gallery.html
@@ -10,24 +10,24 @@
 		<h1>Snapshots</h1>
 	</header>
 	<nav>
-		<ul>
+		<ul id="imagegallery">
 			<li>
-				<a href="images/fireworks.jpg" title="A fireworks display" onclick="showPic(this); return false;">
+				<a href="images/fireworks.jpg" title="A fireworks display">
 					Fireworks
 				</a>
 			</li>
 			<li>
-				<a href="images/coffee.jpg" title="A cup of black coffee" onclick="showPic(this); return false;">
+				<a href="images/coffee.jpg" title="A cup of black coffee">
 					Coffee
 				</a>
 			</li>
 			<li>
-				<a href="images/rose.jpg" title="A red, red rose" onclick="showPic(this); return false;">
+				<a href="images/rose.jpg" title="A red, red rose">
 					Rose
 				</a>
 			</li>
 			<li>
-				<a href="images/bigben.jpg" title="The famous clock" onclick="showPic(this); return false;">
+				<a href="images/bigben.jpg" title="The famous clock">
 					Big Ben
 				</a>
 			</li>
