将列表文字换成图片，优化css代码

--- a/gallery.html
+++ b/gallery.html
@@ -13,22 +13,22 @@
 		<ul id="imagegallery">
 			<li>
 				<a href="images/fireworks.jpg" title="A fireworks display">
-					Fireworks
+					<img src="images/thumbnail_fireworks.jpg" alt="Fireworks">
 				</a>
 			</li>
 			<li>
 				<a href="images/coffee.jpg" title="A cup of black coffee">
-					Coffee
+					<img src="images/thumbnail_coffee.jpg" alt="Coffee">
 				</a>
 			</li>
 			<li>
 				<a href="images/rose.jpg" title="A red, red rose">
-					Rose
+					<img src="images/thumbnail_rose.jpg" alt="Rose">
 				</a>
 			</li>
 			<li>
 				<a href="images/bigben.jpg" title="The famous clock">
-					Big Ben
+					<img src="images/thumbnail_bigben.jpg" alt="Big Ben">
 				</a>
 			</li>
 		</ul>
