动态创建标记

--- a/gallery.html
+++ b/gallery.html
@@ -33,10 +33,10 @@
 			</li>
 		</ul>
 	</nav>
-	<section class="placeholder">
+<!-- 	<section class="placeholder">
 		<img id="placeholder" src="images/placeholder.png" alt="my image gallery" />
 		<p id="description">Choose an image.</p>
-	</section>
+	</section> -->
 
 	<script type="text/javascript" src="scripts/showPic.js"></script>
 </body>
